Nose donde mierda estoy

--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "test": "npx playwright test",
     "test:report": "npx playwright show-report",
     "test:headed": "npx playwright test --headed",
-    "codegen": "npx playwright codegen"
+    "codegen": "npx playwright codegen",
+    "prisma:generate": "npx prisma generate",
+    "prisma:migrate": "npx prisma migrate dev",
+    "prisma:db:create": "npx prisma db push",
+    "prisma:studio": "npx prisma studio"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@prisma/client": "^6.8.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -69,6 +74,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
+    "prisma": "^6.8.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
